--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="../src/index.js" type="text/JSX"></script>
+    <script src="../src/index.js" type="text/jsx"></script>
   </body>
 </html>
