--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../src/App.scss" />
     <title>ODED JACOB</title>
   </head>
   <body>
